source_set("common") {
  sources = [
    "common/content_message_generator.cc",
    "common/content_message_generator.h",
  ]

  deps = [
    "//ipc"
  ]
}

source_set("browser") {
  sources = [
    "browser/webui/presearch_shared_resources_data_source.cc",
    "browser/webui/presearch_shared_resources_data_source.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//presearch/ui/webui/resources",
    "//ui/base",
  ]
}