# Copyright (c) 2019 The Presearch Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//presearch/components/decentralized_dns/buildflags/buildflags.gni")

presearch_net_sources = [
  "//presearch/net/decentralized_dns/constants.h",
  "//presearch/net/dns/presearch_resolve_context.cc",
  "//presearch/net/dns/presearch_resolve_context.h",
  "//presearch/net/proxy_resolution/proxy_config_service_tor.cc",
  "//presearch/net/proxy_resolution/proxy_config_service_tor.h",
]
